--- a/src/components/TutorialForm/styles.module.css
+++ b/src/components/TutorialForm/styles.module.css
@@ -1,17 +1,19 @@
-.title {
+.form input, .form textarea {
+    border-radius: 5px;
+    border: 1px solid black;
     display: block;
     width: 100%;
-    margin-bottom: 20px;
-    font-size: 1.5rem;
-    padding: 10px 20px;
     box-sizing: border-box;
 }
 
+.title {
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+    padding: 10px 20px;
+}
+
 .description {
-    display: block;
-    width: 100%;
     height: 200px;
     font-size: 1.2rem;
     padding: 20px 20px;
-    box-sizing: border-box;
 }
