--- a/src/components/TutorialForm/styles.module.css
+++ b/src/components/TutorialForm/styles.module.css
@@ -1,6 +1,6 @@
 .form input, .form textarea {
     border-radius: 5px;
-    border: 1px solid black;
+    border: 1px solid grey;
     display: block;
     width: 100%;
     box-sizing: border-box;
@@ -8,12 +8,26 @@
 
 .title {
     margin-bottom: 20px;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     padding: 10px 20px;
+
+    /* display: inline; */
+    width: 100%;
+    margin-left: 10px;
+    height: 2rem;
+    border: none;
+    border-bottom: 1px solid grey;
+    border-radius: 0;
 }
 
 .description {
     height: 200px;
-    font-size: 1.2rem;
-    padding: 20px 20px;
+    padding: 10px;
+}
+
+.title_label {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    color: grey;
 }
