--- a/src/components/TutorialPreview/styles.module.css
+++ b/src/components/TutorialPreview/styles.module.css
@@ -3,11 +3,19 @@
     border-radius: 8px;
     background: #f0f0f0;
     padding: 10px 20px;
+    width: 300px;
+    height: 150px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .title {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin: 0;
+    padding-bottom: 10px;
 }
 
 .description {
