--- a/src/components/TutorialPreview/styles.module.css
+++ b/src/components/TutorialPreview/styles.module.css
@@ -10,15 +10,31 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    transition: 0.1s;
 }
 
 .title {
     font-size: 1.5rem;
     margin: 0;
     padding-bottom: 10px;
+    text-align: center;
+    color: black;
 }
 
 .description {
     margin: 0;
     color: grey;
+    text-decoration: none;
+    text-align: center;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.wrapper:hover {
+    background-color: #4582fe47;
+    background-color: #fff;
+    border-color: #4582fe;
 }
