--- a/src/components/BasePage/styles.module.css
+++ b/src/components/BasePage/styles.module.css
@@ -8,5 +8,10 @@
 
 .wrapper>main {
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 1066px;
+}
+
+.wrapper>h1 {
+    text-align: center;
+    margin-bottom: 3rem;
 }
