--- a/src/components/TutorialPreview/styles.module.css
+++ b/src/components/TutorialPreview/styles.module.css
@@ -1,25 +1,23 @@
 .wrapper {
+    align-items: center;
+    background-color: #fff;
     border: 1px solid grey;
     border-radius: 8px;
-    background: #f0f0f0;
-    padding: 10px 20px;
-    width: 300px;
-    height: 150px;
-
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    height: 200px;
     justify-content: center;
-    align-items: center;
-
+    padding: 10px 20px;
     transition: 0.1s;
 }
 
 .title {
+    color: black;
     font-size: 1.5rem;
     margin: 0;
     padding-bottom: 10px;
     text-align: center;
-    color: black;
 }
 
 .description {
@@ -34,7 +32,7 @@
 }
 
 .wrapper:hover {
-    background-color: #4582fe47;
     background-color: #fff;
     border-color: #4582fe;
+    border-width: 2px;
 }
