--- a/src/components/BasePage/styles.module.css
+++ b/src/components/BasePage/styles.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
 }
 
 .wrapper main, .wrapper h1 {
@@ -8,7 +8,7 @@
 
 .wrapper>main {
     margin: 0 auto;
-    max-width: 1066px;
+    /* max-width: 1066px; */
 }
 
 .wrapper>h1 {
