--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -1,9 +1,4 @@
 .wrapper {
-    /* position: fixed;
-    top: 0;
-    left: 0; */
-    /* height: 100vh; */
-    /* width: 300px; */
     background: white;
     padding: 5px 0;
 }
@@ -15,4 +10,16 @@
 .wrapper>ul {
     display: flex;
     justify-content: space-evenly;
+}
+
+.link {
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+    border-radius: 12px;
+}
+
+.link__active, .link:hover {
+    background-color: #14213d;
+    color: white;
 }
