--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -1,10 +1,16 @@
 .wrapper {
+    position: sticky;
     background: white;
-    padding: 5px 0;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 50px;
 }
 
 .wrapper li {
     list-style: none;
+    margin: 0 10px;
 }
 
 .wrapper>ul {
@@ -22,4 +28,12 @@
 .link__active, .link:hover {
     background-color: #14213d;
     color: white;
+}
+
+.logo {
+    color: #4582FE;
+    font-weight: bold;
+    font-size: 2rem;
+
+    text-transform: uppercase;
 }
