--- a/src/components/TutorialPreview/styles.module.css
+++ b/src/components/TutorialPreview/styles.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+    position: relative;
     align-items: center;
     background-color: #fff;
     border: 1px solid grey;
@@ -34,5 +35,12 @@
 .wrapper:hover {
     background-color: #fff;
     border-color: #4582fe;
-    border-width: 2px;
+    /* border-width: 2px; */
+}
+
+.author {
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    color: black;
 }
