--- a/src/components/ProfileForm/styles.module.css
+++ b/src/components/ProfileForm/styles.module.css
@@ -3,9 +3,7 @@
     padding: 20px;
 }
 
-.title {
-    margin-top: 0;
-}
+.title { margin-top: 0; }
 
 .form input {
     /* height: 30px; */
@@ -23,23 +21,29 @@
     justify-content: space-between;
 }
 
-.input_row_3>* {
-    width: 32%;
-}
+.input_row_3>* { width: 32%; }
 
-.submit_button {
-    background: #4582FE;
-    color: white;
+.submit_button, .cancel_button {
     border-radius: 4px;
     border: none;
     padding: 8px 12px;
     cursor: pointer;
 }
 
-.submit_button:hover {
-    background: #2d6df0;
+.submit_button {
+    background: #4582FE;
+    color: white;
 }
 
-.form_footer {
-    margin-top: 2rem;
+.submit_button:hover { background: #2d6df0; }
+
+.cancel_button {
+    background: #b7b7b7;
+    color: white;
 }
+
+.cancel_button:hover { background: grey; }
+
+.form_footer { margin-top: 2rem; }
+
+.form_footer>button { margin-right: 1rem; }
