--- a/src/components/ProfileForm/styles.module.css
+++ b/src/components/ProfileForm/styles.module.css
@@ -1,6 +1,11 @@
 .wrapper {
-    background-color: white;
+    background: white;
     padding: 20px;
+    box-sizing: border-box;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    border: 1px solid #8080802b;
 }
 
 .title { margin-top: 0; }
