--- a/src/components/Tutorial/styles.module.css
+++ b/src/components/Tutorial/styles.module.css
@@ -4,8 +4,13 @@
 }
 
 .step_wrapper {
-    background-color: white;
-    padding: 20px 10px;
+    background: white;
+    padding: 20px;
+    box-sizing: border-box;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    border: 1px solid #8080802b;
 }
 
 .step_wrapper>h3 {
